Fix overflow :3

--- a/public/assets/scss/components/ProfileDropdown.scss
+++ b/public/assets/scss/components/ProfileDropdown.scss
@@ -29,7 +29,7 @@
       border-radius: 5px;
       background: rgb(255, 255, 255);
       box-shadow: 0 0.125rem 6rem 2px rgb(0 0 0 / 20%);
-      z-index: 950;
+      z-index: 99999999999;
 
       .user_info {
         img {
